--- a/lambregs_ximera/ae_behoud.tex
+++ b/lambregs_ximera/ae_behoud.tex
@@ -12,7 +12,7 @@
 
 
 
-	\section{Het beginsel van behoud van energie}
+	%%%\section{Het beginsel van behoud van energie}
 
 	Het arbeid-energietheorema relateert de geleverde arbeid door een resulterende kracht met de toename aan kinetische energie. Het zegt dat de hoeveelheid geleverde arbeid door de resulterende kracht volledig wordt gebruikt voor de toename van kinetische energie.
 	Anderzijds als met de resulterende kracht een potenti\"ele energie kan worden geassocieerd, dan is de geleverde arbeid afkomstig van het verlies in potenti\"ele energie. De energie die dus onder de vorm van potenti\"ele energie verloren gaat wordt in kine\-ti\-sche energie gewonnen. En dit zodanig dat de som van beide energi\"en - de totale mechanische energie - constant blijft.
