--- a/lambregs_ximera/ae_constante_kracht.tex
+++ b/lambregs_ximera/ae_constante_kracht.tex
@@ -22,7 +22,7 @@
 	
 
 	
-	\section{Arbeid geleverd door een constante kracht}
+	%%%\section{Arbeid geleverd door een constante kracht}
 	
 	%\subsection{Kracht en verplaatsing hebben dezelfde richting}
 	De arbeid $W$ door een constante kracht $F$ geleverd op een lichaam bij een verplaatsing $\Delta x=x_b-x_a$ wordt gedefinieerd als \footnote{Besef dat dit een \textit{definitie} van een fysische grootheid is. Terecht zou ge u kunnen afvragen waarom we arbeid op deze manier defini\"eren en niet anders. Dat de grootheid kracht erin moet voorkomen, is duidelijk: anders kan je een veer van een horloge niet opwinden. Ook is een verplaatsing nodig om van arbeid te kunnen spreken. Als immers de veer niet beweegt, kan er geen sprake zijn van een verandering in de energietoestand van de veer en dus ook niet van een overdracht van energie naar de veer -- wat arbeid is. Dat er bijvoorbeeld geen snelheid in voorkomt, kan je inzien door je te realiseren dat de snelheid waarmee je een veer opwindt, niet mag uitmaken. Enkel de uiteindelijke toestand van de veer is van belang. En waarom dan het product van de kracht met de verplaatsing? Wel, omdat het de enige manier is waarop we aan een fysische grootheid zullen komen die de naam energie waardig is... (!). Zie hiervoor het arbeid-energietheorema.}
