--- a/lambregs_ximera/ae_niet_constante_kracht.tex
+++ b/lambregs_ximera/ae_niet_constante_kracht.tex
@@ -12,7 +12,7 @@
 
 
 
-	\section{Arbeid van een niet-constante kracht}
+	%%%\section{Arbeid van een niet-constante kracht}
 
 	Algemeen zal een kracht gedurende de verplaatsing niet constant blijven. Ze zal met andere woorden o.a. afhankelijk zijn van de plaats waar het lichaam zich bevindt. We kunnen die afhankelijkheid beschrijven met behulp van een functie, de (grootte van de) kracht
 	als functie van de plaats:
