--- a/lambregs_ximera/ae_pot_elastische.tex
+++ b/lambregs_ximera/ae_pot_elastische.tex
@@ -10,7 +10,7 @@
 
 
 
-	\section{Potenti\"ele energie}
+	%%%\section{Potenti\"ele energie}
 
 	Naast kinetische energie -- de energie geassocieerd met de beweging van een lichaam -- kunnen we een andere vorm van mechanische energie defini\"eren: de \textit{potenti\"ele energie}. Dit is de energie geassocieerd met de plaats of configuratie van een lichaam. Een lichaam met kinetische energie heeft energie omdat het als gevolg van zijn beweging arbeid kan verrichten op een ander object. Kan een object arbeid verrichten als gevolg van zijn plaats, dan noemen we deze energie potenti\"ele energie.
 	
