--- a/lambregs_ximera/ae_theorema.tex
+++ b/lambregs_ximera/ae_theorema.tex
@@ -9,7 +9,7 @@
     \xmsource
 
 
-	\section{Het arbeid-energietheorema}
+	%%%\section{Het arbeid-energietheorema}
 
 	Indien op een voorwerp een resulterende kracht inwerkt, moet de snelheid ervan veranderen. Volgens de tweede wet van Newton krijgt het immers een versnelling. Indien kracht en verplaatsing dezelfde zin hebben, is er een snelheidstoename en is de arbeid door de kracht geleverd positief. Er moet dus misschien een verband bestaan tussen de geleverde arbeid en de verandering in snelheid \ldots 
 	
