--- a/lambregs_ximera/glvn_periodieke_golven.tex
+++ b/lambregs_ximera/glvn_periodieke_golven.tex
@@ -9,7 +9,7 @@
     \xmsource
 
 
-	\section{Periodieke golven}
+	%%%\section{Periodieke golven}
 
 	Zoals we de positie van een voorwerp konden beschrijven met een functie $x(t)$, willen we ook een golf m.b.v. een functie kunnen beschrijven. Omdat een golf niet te lokaliseren is in een punt maar zich uitstrekt over de hele ruimte en daarnaast in de tijd evolueert, hebben we een iets uitgebreidere functie nodig. De uitwijking $y$ van het medium is zowel afhankelijk van de plaats $x$ waarop je kijkt als het moment $t$ dat je interesseert. De oplossing bestaat erin een functie in twee variabelen te gebruiken. 
 	%%%\newline
@@ -77,7 +77,7 @@
 	
 	%%\newpage
 	
-	%\section{Verschijnselen}
+	%%%%\section{Verschijnselen}
 	%
 	%%\includepdf[pages={1},scale=1]{./golven_giancoli/scan_0.pdf}
 	%
@@ -166,7 +166,7 @@
 	%%- adhv watergolven/abstract?
 	%%- twee fases? eerst gemakkelijk en vervolgens wiskundig?
 	%%
-	%%\section{Staande golven}
+	%%%%%\section{Staande golven}
 	%%
 	%%\begin{tikzpicture}[domain=0:4] 
 	%%    \draw[very thin,color=gray] (-0.1,-1.1) grid (3.9,3.9);
