--- a/lambregs_ximera/grvt_zwaartekracht.tex
+++ b/lambregs_ximera/grvt_zwaartekracht.tex
@@ -12,7 +12,7 @@
 
 
 
-	\section{De zwaartekracht}
+	%%%\section{De zwaartekracht}
 	De zwaartekracht is een bijzonder geval van de universele gravitatiekracht: de gravitatiekracht door de aarde op een massa uitgeoefend noemen we ook de zwaartekracht.
 	
 	\subsection{De valversnelling}
