--- a/lambregs_ximera/hrmn_harmonische_oscillator.tex
+++ b/lambregs_ximera/hrmn_harmonische_oscillator.tex
@@ -14,7 +14,7 @@
 	Om golven te kunnen beschrijven, behandelen we eerst trillingen. Dat is een iets eenvoudiger verschijnsel. Trillingen zijn heen en weer gaande bewegingen op een lijn. Zo trilt bijvoorbeeld een gitaarsnaar wanneer je hem aanslaat, trilt het rietje in een hobo bij het blazen of trillen elektronen in de antenne van je gsm.
 	
 
-	% \section{Enkele voorbeelden}
+	% %%%\section{Enkele voorbeelden}
 	% 
 	% - geluid
 	% - licht
@@ -23,7 +23,7 @@
 
 	
 	
-	\section{De harmonische oscillator}
+	%%%\section{De harmonische oscillator}
 	
 	Als eerste voorbeeld behandelen we een eenvoudig mechanisch systeem: een massa die aan een veer is bevestigd. We noemen dit een massa-veersysteem. En zoals we al zo vaak hebben gedaan, beschouwen we een model waar geen wrijving aanwezig is. Laten we bovendien de veer een horizontale ori\"entatie geven zodat we ook de zwaartekracht buiten beschouwing kunnen laten.
 	\begin{image}
