--- a/lambregs_ximera/hrmn_mathematische_slinger.tex
+++ b/lambregs_ximera/hrmn_mathematische_slinger.tex
@@ -12,7 +12,7 @@
 
 
 
-	\section{De mathematische slinger}
+	%%%\section{De mathematische slinger}
 
 	Als tweede voorbeeld bekijken we een massa aan een touw. Geen erg spectaculair systeem, zal je denken. Toch zal je snel zien dat de beweging verre van eenvoudig is.
 	
