--- a/lambregs_ximera/hrmn_relatie_cirkelbeweging.tex
+++ b/lambregs_ximera/hrmn_relatie_cirkelbeweging.tex
@@ -10,7 +10,7 @@
 
 
 
-	\section{Relatie met een cirkelbeweging}
+	%%%\section{Relatie met een cirkelbeweging}
 
 	Wanneer we op een grammofoonplaat en klein object leggen en met een lamp de schaduw op de muur bekijken terwijl de plaat draait, dan zien we evenzeer een op- en neergaande beweging. 
 	\begin{image}
