--- a/lambregs_ximera/knmtc_1dim_ERB.tex
+++ b/lambregs_ximera/knmtc_1dim_ERB.tex
@@ -10,7 +10,7 @@
 
 
 
-	\section{ERB}
+	%%%\section{ERB}
 
 	De \emph{eenparig rechtlijnige beweging} (afgekort ERB) is een specifieke beweging. De snelheid van de beweging is eenparig of gelijkmatig verdeeld wat betekent dat de snelheid steeds gelijk blijft. M.a.w. is de snelheid constant of is de versnelling nul. Omdat de snelheid niet verandert is de ogenblikkelijke snelheid gelijk aan de gemiddelde snelheid en kunnen we gemakkelijk een functie vinden voor de positie in functie van de tijd:
 	\begin{eqnarray*}
