--- a/lambregs_ximera/knmtc_1dim_EVRB.tex
+++ b/lambregs_ximera/knmtc_1dim_EVRB.tex
@@ -10,7 +10,7 @@
 
 
 
-	\section*{C Eenparig veranderlijke rechtlijnige beweging}
+	%%%\section*{C Eenparig veranderlijke rechtlijnige beweging}
 
 	Een beweging waarvan de versnelling constant is, noemen we een \textit{eenparig veranderlijke rechtlijnige be\-we\-ging}, afgekort EVRB. Eenparig betekent gelijkmatig; de snelheidsverandering is steeds gelijk. In symbolen geldt dus dat $a(t)=a$ waarbij het maatgetal van $a$ een re\"eel getal is. We werken voor dit model de plaatsfunctie en de snelheidsfunctie uit. M.a.w. willen we het verloop van de plaats en de snelheid in functie van de tijd kennen. 
 	
@@ -72,7 +72,7 @@
 	\thispagestyle{empty}
 	
 	
-	% \section*{Voorbeeldoefening}
+	% %%%\section*{Voorbeeldoefening}
 	
 	\begin{exercise}
 	
