--- a/lambregs_ximera/knmtc_1dim_begrippen.tex
+++ b/lambregs_ximera/knmtc_1dim_begrippen.tex
@@ -17,7 +17,7 @@
 	
 
 	
-	\section{Enkele begrippen}
+	%%%\section{Enkele begrippen}
 	\subsection{Positie en plaatsfunctie}
 	
 	Het beschrijven van de beweging van een puntmassa kunnen we doen door de positie in de ruimte te geven in functie van de tijd. We kunnen m.a.w. een functie gebruiken die de plaats in functie van de tijd geeft. We noemen deze functie de \emph{plaatsfunctie} $x(t)$. $x$ staat voor de positie op een co\"ordinaatas\footnote{Een co\"ordinaatas is een as van een cartesiaans assenstelsel, met een oorsprong en een ori\"entatie.} en $t$ is de variabele die symbool staat voor de tijd\footnote{In de fysica gebruiken we de wiskunde als `taal' om de wetmatigheden van de natuur in uit te drukken. Wiskundige variabelen en objecten zoals functies krijgen nu een fysische betekenis. $x(t)$ is dus niets anders dan een functie $f(x)$ of $y(x)$ zoals je die in wiskunde kent. Alleen nemen wij nu niet voor de onafhankelijke variabele het symbool $x$ maar het symbool $t$ omdat deze symbool moet staan voor de tijd. En voor het symbool $f$ gebruiken wij nu het symbool $x$ omdat de beeldwaarden van de functie nu als betekenis een positie op een co\"ordinaatas hebben.}. Een notatie voor een bepaalde posities \footnote{Natuurlijk kan de index 1 ook vervangen worden door andere indices. Voorbeelden zijn $x_0=x(t_0)$ en $x_2=x(t_2)$.} op de co\"ordinaatas op een bepaald tijdstip $t_1$, is:
