--- a/lambregs_ximera/knmtc_1dim_verticale_worp.tex
+++ b/lambregs_ximera/knmtc_1dim_verticale_worp.tex
@@ -9,7 +9,7 @@
     \xmsource
 
 
-	\section{Verticale worp}
+	%%%\section{Verticale worp}
 
 	Onze perceptie van vallende voorwerpen is dat zwaardere lichamen sneller vallen dan lichtere. Een veertje en een hamer komen in de regel niet tegelij\-ker\-tijd op de grond terecht. Wanneer we echter voorwerpen in vacu\"um\footnote{In vacu\"um ondervinden voorwerpen geen luchtweerstand.} laten vallen, blijkt de massa geen rol te spelen bij de constante versnelling die de voorwerpen krijgen -- alle voorwerpen vallen met dezelfde versnelling. De verklaring hiervoor hoort thuis in de dynamica. In de kinematica houden we ons enkel bezig met de beschrijving van de beweging. Aangezien de valversnelling constant is, hebben we simpelweg met een EVRB te maken.
 	\begin{image}
