--- a/lambregs_ximera/knmtc_2dim_horizontale_worp.tex
+++ b/lambregs_ximera/knmtc_2dim_horizontale_worp.tex
@@ -11,7 +11,7 @@
 
 
 
-	\section{De horizontale worp}
+	%%%\section{De horizontale worp}
 
 	We bekijken een voorbeeld van een tweedimensionale beweging. Wanneer een object horizontaal met een bepaalde beginsnelheid wordt gecatapulteerd, noemen we die beweging een horizontale worp. Wij beschouwen de worp in het luchtledige.
 	\begin{image}
