--- a/lambregs_ximera/nwtn_derde_beginsel.tex
+++ b/lambregs_ximera/nwtn_derde_beginsel.tex
@@ -8,7 +8,7 @@
 	\xmtitle{Het derde beginsel van Newton}{}
     \xmsource
 
-	% \section{Het derde beginsel van Newton}
+	% %%%\section{Het derde beginsel van Newton}
 
 	Meestal plooien we onze vingers naar onze handpalm toe. De praktijk leert ons dat het andersom toch iets moeilijker gaat. Misschien vandaar. Als je echter met je andere hand wat helpt en duwt -- een kracht uitoefent -- plooien je vingers al iets verder naar achter. Uit zichzelf geraken ze niet zo ver. Als je nu -- ter vergelijking -- met gestrekte vingers tegen de tafel duwt, plooien je vingers eveneens meer naar achteren dan dat ze uit zichzelf zouden kunnen. Je moet concluderen dat naast het feit dat je een kracht op de tafel uitoefent\footnote{Misschien nu met weinig beweging tot gevolg.} de tafel op zijn beurt een kracht op je vingers uitoefent. Zonder extern inwerkende kracht zouden je vingers immers niet zo ver kunnen doorbuigen.
 	%\begin{image}
