--- a/lambregs_ximera/nwtn_historische_uitwijding.tex
+++ b/lambregs_ximera/nwtn_historische_uitwijding.tex
@@ -12,7 +12,7 @@
 
 
 
-	\section*{Dialogo sopra i due massimi sistemi del mondo}
+	%%%\section*{Dialogo sopra i due massimi sistemi del mondo}
 
 	Galileo schreef in 1632 een dialoog waarin hij de juistheid van het copernicaanse wereldbeeld fysisch probeerde te bewijzen door middel van de socratische methode\footnote{Van Dale: waarbij men de denkbeelden uit de geest van de leerling zelf ontwikkelt, terwijl men hem door gepaste vragen allengs zo ver brengt, dat hij het begrip, dat men hem duidelijk wil maken, zelf vindt.}. Een van de tegenargumenten was dat een vallende steen niet volgens een loodlijn op het aardoppervlak zou neerkomen, wanneer de aarde zelf een rotatie uitvoerde.\footnote{De aarde zou immers onder de steen wegdraaien.} Galileo haalde dit argument onderuit door gebruik te maken van het traagheidsbeginsel (anderen hadden dit ook geprobeerd via een 'slepende invloed' van de lucht, maar Galileo zag in dat dat niet voldoende was en erkent de ware fysische grondslag).
 	De dialoog gaat tussen drie geleerden. Sagredo is de vriend van een niet nader genoemd auteur (Galileo), die zijn gesprekspartners inlicht over diens nieuwe theori\"en. Salviati is de onbevooroordeelde geleerde die vooral zijn gezond verstand gebruikt, en dus de positie van de lezer verbeeldt. Simplicio is de wat simplistische schoolgeleerde (scholasticus), die het standpunt van Aristoteles weergeeft.
