--- a/lambregs_ximera/nwtn_oplossingsstrategie.tex
+++ b/lambregs_ximera/nwtn_oplossingsstrategie.tex
@@ -12,7 +12,7 @@
 
 
 
-	\section{Oplossingsstrategie}
+	%%%\section{Oplossingsstrategie}
 
 	Bij het oplossen van vraagstukken waarin de wetten van Newton worden gebruikt, kan een vast stramien of heuristiek gebruikt worden. Omdat elke opgave anders is, blijft creativiteit noodzakelijk.
 	\begin{enumerate}
