--- a/lambregs_ximera/nwtn_traagheid.tex
+++ b/lambregs_ximera/nwtn_traagheid.tex
@@ -16,7 +16,7 @@
 	
 
 	
-	\section{De wet van de traagheid}
+	%%%\section{De wet van de traagheid}
 	
 	Op 22 oktober 1895 gebeurde er in het eindstation Gare Montparnasse -- Parijs, een ongeluk. De treinbestuurder was door het station gereden en pas 30 meter voorbij het einde van het spoor tot stilstand gekomen.
 	\begin{image}
