--- a/lambregs_ximera/nwtn_tweede_beginsel.tex
+++ b/lambregs_ximera/nwtn_tweede_beginsel.tex
@@ -9,7 +9,7 @@
     \xmsource
 
 
-	% \section{Het tweede beginsel van Newton}
+	% %%%\section{Het tweede beginsel van Newton}
 
 	De eerste wet vertelt ons niet volledig wat er gebeurt wanneer op een lichaam een kracht werkt. Ze vertelt ons niet wat de relatie tussen kracht en beweging is. Uit onze dagelijkse ervaring zou je kunnen concluderen dat de snelheid van een voorwerp recht evenredig is met de erop uitgeoefende kracht. Hoe harder je immers op de pedalen duwt, hoe harder je gaat. De eerste wet vertelde ons echter al dat dit niet opgaat. 
 	
