--- a/lambregs_ximera/glvn_golven_kenmerken.tex
+++ b/lambregs_ximera/glvn_golven_kenmerken.tex
@@ -21,7 +21,7 @@
 	
 	%golf = def
 	
-	\section{Golven \& kenmerken}
+	%%%\section{Golven \& kenmerken}
 	
 	Golven kunnen we volgens hun kenmerken indelen in een paar categori\"en. Zo kunnen we een onderscheid maken tussen \emph{mechanische} en \emph{elektromagnetische} golven. Mechanische golven hebben een (elastisch\footnote{De vervorming in het medium kan zich maar voortzetten van zodra het lichaam te vervormen is en dus elastisch is. Er moeten immers krachten tussen de verschillende plaatsen van het medium aanwezig zijn.}) medium nodig om zich in te verplaatsen -- het is de storing in het medium die de golf vormt. Elektromagnetische golven daarentegen hebben geen medium nodig. Het zijn de elektrische en de magnetische veldenvectoren die golven.\footnote{Ook de recentelijk gemeten zwaartekrachtgolven moeten tot de categorie behoren van golven die geen medium nodig hebben. Het zijn rimpelingen van de ruimte-tijd zelf.}
 	\begin{image}
