--- a/lambregs_ximera/knmtc_2dim_onafhankelijkheidsbeginsel.tex
+++ b/lambregs_ximera/knmtc_2dim_onafhankelijkheidsbeginsel.tex
@@ -21,7 +21,7 @@
 	Omdat we om de snelheid van het object te kunnen beschrijven niet voldoende hebben aan alleen maar de grootte maar ook nood hebben aan een richting, maken we nu expliciet gebruik van vectoren en hun geschikte eigenschappen. Naast een nieuwe as voor de extra dimensie is het gebruik van vectoren de enige aanpassing die we aan ons formalisme van de kinematica moeten doen om bewegingen in twee dimensies te kunnen beschrijven.
 	
 
-	\section{Onafhankelijkheidsbeginsel}
+	%%%\section{Onafhankelijkheidsbeginsel}
 	
 	Stel je voor dat het heel mooi weer is. Zo van dat weer waar de hemel hemelsblauw is, er geen wolken aan de lucht zijn, de zon aan de hemel schittert en je niets liever doet dan een frisse neus halen. In zo'n weer zouden we diep in en uit ademen. Oh ja, detail, stel je ook voor dat er \emph{geen}\footnote{Begrijpelijk zou je kunnen opwerpen dat het nogal moeilijk is om frisse lucht die er niet is, in te ademen.} lucht is. Stel je bovendien voor dat je in het kraaiennest van een piratenschip zit. Het schip vaart met een gestadige, grote en constante snelheid over het zee-oppervlak dat geen enkele rimpeling vertoont. Golven zijn er niet\footnote{Ook hier zou je kunnen opperen dat een zee zonder golven niet echt een zee is.}. Stel je ook voor dat je een nogal zware kogel naar je uitkijkpost hebt meegenomen\footnote{Tja, in een gedachte-experiment zoals dit is veel mogelijk.}. Als je nu deze kogel laat vallen, met zicht op het achtersteven van het schip, dan \ldots dan valt hij natuurlijk regelrecht naar beneden op het hoofd van de kapitein die aan de voet van de mast staat en waarvoor me het arsenaal bijvoeglijke naamwoorden om zijn onuitstaanbaarheid te kunnen uitdrukken, even ontbreekt. Stel je nu ook voor dat zogezegd door de snelheid van het schip de kogel \emph{achter} het schip zou terechtkomen\footnote{Jawel, er zijn er onder ons die zich dat voorstellen} \ldots, dan zouden in een snel rijdende trein de valiezen die je op het rek legt zich met een enorme snelheid naar de achterkant van de wagon begeven, de kaarten die je wilt afleggen eveneens dezelfde plaats opzoeken i.p.v. netjes op de  aflegstapel te blijven liggen en dan zou de dame van de koffiebar enig kuiswerk hebben met de koffie die een ware ravage zou aanrichten \ldots 
 	\begin{image}
