--- a/lambregs_ximera/ae_intro.tex
+++ b/lambregs_ximera/ae_intro.tex
@@ -5,7 +5,7 @@
 
 \begin{document}
 	\author{Bart Lambregs}
-	\xmtitle{Arbeid geleverd door een constante kracht}{}
+	\xmtitle{Inleiding}{}
     \xmsource
     \xmsource
 
@@ -19,5 +19,5 @@
 	
 	Ook in de omgangstaal kennen we de termen arbeid en energie. Je mag echter niet vergeten dat deze hier een bredere betekenis dragen dan degene die we binnen de fysica voor ogen hebben. Zo moet de \textit{kwalitatieve} omschrijving van de mogelijkheid om arbeid te verrichten, vervangen worden door een \textit{kwantitatieve}; we willen weten \textit{hoeveel} arbeid er geleverd wordt, of \textit{hoeveel} energie een bepaald lichaam bezit. Als we bovendien zeggen dat energie de mogelijkheid is om arbeid te leveren, dan moeten we in eerste instantie het begrip arbeid \textit{defini\"eren}. We gebruiken hiervoor o.a. het begrip kracht. Aan de hand van het begrip arbeid, kunnen we dan vervolgens het begrip energie defini\"eren.
 	
-	
-	\end{document}
+
+\end{document}
